charts/ollama/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Homelab
    gethomepage.dev/icon: ollama.png
    gethomepage.dev/name: Ollama
spec:
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
  hostnames:
  - ollama.int.imdevinc.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ollama
      namespace: ollama
      port: 11434
